avoid gaps in gallery at all sizes

--- a/static/style.css
+++ b/static/style.css
@@ -71,9 +71,27 @@ main {
 .entry {
   /* aspect-ratio:1; */
   /* max-width:100%; */
-  min-width: 10em;
-  max-width: 25%;
+  max-width: 20%;
   flex: 1 0 auto;
+  min-height: 20rem;
+}
+
+@media (max-width: 70em) {
+  .entry {
+    max-width: 25%;
+  }
+}
+
+@media (max-width: 50em) {
+  .entry {
+    max-width: 33.33%;
+  }
+}
+
+@media (max-width: 35em) {
+  .entry {
+    max-width: 50%;
+  }
 }
 
 figure {
